--- a/MACDNotification/res/values/strings.xml
+++ b/MACDNotification/res/values/strings.xml
@@ -5,5 +5,9 @@
     <string name="validate">Validate</string>
     <string name="remove">Remove</string>
     <string name="new_symbol">New Symbol</string>
+    <string name="content_desc_delete"/>
+    <string name="ask_delete_symbol">Do you want to delete this symbol?</string>
+    <string name="add"/>
+    <string name="content_desc">add</string>
 
 </resources>
