--- a/MACDNotification/res/values/strings.xml
+++ b/MACDNotification/res/values/strings.xml
@@ -4,9 +4,12 @@
     <string name="log_tag">MACDNotification</string>
     <string name="validate">Validate</string>
     <string name="remove">Remove</string>
-    <string name="new_symbol">New Symbol</string>
+    <string name="new_symbol">New symbol</string>
+    <string name="new_group">New group</string>
+    <string name="group_name">Group Name</string>
+    <string name="symbol_name">Symbol Name</string>
     <string name="content_desc_delete"/>
-    <string name="ask_delete_symbol">Do you want to delete this symbol?</string>
+    <string name="ask_delete_symbol">Are you sure you want to delete this symbol?</string>
     <string name="add"/>
     <string name="content_desc">add</string>
 
