--- a/MACDNotification/res/values/strings.xml
+++ b/MACDNotification/res/values/strings.xml
@@ -8,7 +8,10 @@
     <string name="group_name">Group Name</string>
     <string name="symbol_name">Symbol Name</string>
     <string name="content_desc_delete"/>
+    <string name="content_desc_delete_group"/>
     <string name="ask_delete_symbol">Are you sure you want to delete this symbol?</string>
+    <string name="ask_delete_group">
+        Are you sure you want to delete this group and all its symbols?</string>
     <string name="add"/>
     <string name="content_desc">add</string>
 
