--- a/MACDNotification/res/values/strings.xml
+++ b/MACDNotification/res/values/strings.xml
@@ -14,5 +14,6 @@
         Are you sure you want to delete this group and all its symbols?</string>
     <string name="add"/>
     <string name="content_desc">add</string>
+    <string name="rule_no_1_valuation">Rule #1 valuation</string>
 
 </resources>
