--- a/MACDNotification/res/values/strings.xml
+++ b/MACDNotification/res/values/strings.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
 
     <string name="app_name">MACDNotification</string>
@@ -7,13 +8,15 @@
     <string name="new_group">New group</string>
     <string name="group_name">Group Name</string>
     <string name="symbol_name">Symbol Name</string>
-    <string name="content_desc_delete"/>
-    <string name="content_desc_delete_group"/>
+    <string name="content_desc_delete" />
+    <string name="content_desc_delete_group" />
     <string name="ask_delete_symbol">Are you sure you want to delete this symbol?</string>
-    <string name="ask_delete_group">
-        Are you sure you want to delete this group and all its symbols?</string>
-    <string name="add"/>
+    <string name="ask_delete_group">        Are you sure you want to delete this group and all its symbols?</string>
+    <string name="add" />
     <string name="content_desc">add</string>
     <string name="rule_no_1_valuation">Rule #1 valuation</string>
+    <string name="title_activity_activity_stock_view">ActivityStockView</string>
+    <string name="action_settings">Settings</string>
+    <string name="hello_world">Hello world!</string>
 
 </resources>
